# log-anomaly-platform

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.scanner  LICENSE  README.md  pyproject.toml  writeup.md
infra/: apprunner-service.json  apprunner-usage-policy.json  docker-compose.services.yml  docker-compose.yml  lap-task-def.json
infra/k8s/: hpa.yaml  kafka.yaml  load-job.yaml  producer-job.yaml  services.yaml
lap/: detector.py  detector_np.py  features.py  model.py  model_store.py  parser.py
ml/models/: detector.npz
ml/training/: eval.py  train.py
scripts/: export_numpy.py  gen_logs.py  generate_logs.py  kinesis_produce.py
services/api/: main.py  stats.py
services/api/sample-logs/: access_mixed_labels.csv
services/api/static/: index.html
services/inference/: main.py
services/ingestion/: main.py
services/producer/: main.py
services/results/: api.py  consumer.py  db.py  dynamo.py  requirements.txt
tests/: test_api.py  test_detector.py  test_detector_np.py  test_e2e.py  test_features.py  test_inference.py  test_ingestion.py  test_parser.py  test_results.py
