[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "log-anomaly-platform"
version = "0.1.0"
description = "Real-time log anomaly detection platform"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "torch>=2.0"]

[tool.setuptools.packages.find]
include = ["lap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]